--- a/docs/pages/fragments/high-availability.mdx
+++ b/docs/pages/fragments/high-availability.mdx
@@ -124,6 +124,8 @@ api:
     capabilities:
       drop:
       - ALL
+      add:
+      - NET_BIND_SERVICE
     readOnlyRootFilesystem: true
     runAsGroup: 12345
     runAsNonRoot: true
